examples/test/conf/HTTPRoute/Backend/BackendTLS/EndpointSlice_edge_test-backend-mtls-no-client-cert.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: test-backend-mtls-no-client-cert
  namespace: edgion-test
  labels:
    kubernetes.io/service-name: test-backend-mtls-no-client-cert
addressType: IPv4
ports:
  - name: https
    port: 30052
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
