examples/test/conf/HTTPRoute/Backend/BackendTLS/HTTPRoute_edge_backend-mtls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-mtls-test
  namespace: edgion-test
spec:
  parentRefs:
    - name: backend-tls-gateway
      namespace: edgion-test
  hostnames:
    - "test.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /backend-mtls/
      backendRefs:
        - name: test-backend-mtls
          port: 30052
    - matches:
        - path:
            type: PathPrefix
            value: /backend-mtls-no-client-cert/
      backendRefs:
        - name: test-backend-mtls-no-client-cert
          port: 30052
