examples/test/conf/HTTPRoute/Backend/BackendTLS/Service_edge_test-backend-mtls.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-backend-mtls
  namespace: edgion-test
spec:
  ports:
    - name: https
      port: 30052
      protocol: TCP
      targetPort: 30052
  type: ClusterIP
